RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -241,8 +241,9 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Using file sort**
 	* ORDERED BY 처리가 인덱스를 사용하지 못할 때만 코멘트 표시.
 	* 조회된 레코드를 정렬용 메모리 버퍼에 복사해 퀵 소트 알고리즘을 수행한다.
-	* 해당 메세지가 출력되는 쿼리는 많은 부하를 일으키기 때문에 쿼리를 튜닝하거나 인덱스를 생성하는 것이 좋다
+	* 해당 메세지가 출력되는 쿼리는 많은 부하를 일으키기 때문에 쿼리를 튜닝하거나 인덱스를 생성하는 것이 좋다.
 * **Using index(커버링 인덱스)**
+	* 
 * **Using index for group-by**
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
@@ -253,7 +254,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDA2MDkyODEzLC0xMzEzMzE0MDIwLDI5ND
+eyJoaXN0b3J5IjpbNDU1NzQwNjU3LC0xMzEzMzE0MDIwLDI5ND
 U1NzQ1Nyw1MzUyMDY4NjcsMTA4NTk4NjY2LC0xODE1ODMzOTE0
 LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLTE2ODAyNjQ4MDMsLT
 c0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2Mjkz
