--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -243,7 +243,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* 조회된 레코드를 정렬용 메모리 버퍼에 복사해 퀵 소트 알고리즘을 수행한다.
 	* 해당 메세지가 출력되는 쿼리는 많은 부하를 일으키기 때문에 쿼리를 튜닝하거나 인덱스를 생성하는 것이 좋다.
 * **Using index(커버링 인덱스)**
-	* 
+	* 데이터 파일을 전혀 읽지 않고 인덱스만 읽어서 쿼리를 모두 처리할 수 있을 때 표시.
 * **Using index for group-by**
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
@@ -254,11 +254,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDU1NzQwNjU3LC0xMzEzMzE0MDIwLDI5ND
-U1NzQ1Nyw1MzUyMDY4NjcsMTA4NTk4NjY2LC0xODE1ODMzOTE0
-LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLTE2ODAyNjQ4MDMsLT
-c0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2Mjkz
-NjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1My
-wtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEw
-NzcwMzYxMDhdfQ==
+eyJoaXN0b3J5IjpbLTIwNjMzMTY0NTAsNDU1NzQwNjU3LC0xMz
+EzMzE0MDIwLDI5NDU1NzQ1Nyw1MzUyMDY4NjcsMTA4NTk4NjY2
+LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLT
+E2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5
+NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyND
+ksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwx
+NTQwODgxODQxXX0=
 -->
