RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -244,6 +244,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* 해당 메세지가 출력되는 쿼리는 많은 부하를 일으키기 때문에 쿼리를 튜닝하거나 인덱스를 생성하는 것이 좋다.
 * **Using index(커버링 인덱스)**
 	* 데이터 파일을 전혀 읽지 않고 인덱스만 읽어서 쿼리를 모두 처리할 수 있을 때 표시.
+	* 
 * **Using index for group-by**
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
@@ -254,11 +255,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNjMzMTY0NTAsNDU1NzQwNjU3LC0xMz
-EzMzE0MDIwLDI5NDU1NzQ1Nyw1MzUyMDY4NjcsMTA4NTk4NjY2
-LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLT
-E2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5
-NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyND
-ksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwx
-NTQwODgxODQxXX0=
+eyJoaXN0b3J5IjpbMzYwNzU1NjQ2LDQ1NTc0MDY1NywtMTMxMz
+MxNDAyMCwyOTQ1NTc0NTcsNTM1MjA2ODY3LDEwODU5ODY2Niwt
+MTgxNTgzMzkxNCwyMDE0MTY3OTU4LC0xNzA3OTg1MDM0LC0xNj
+gwMjY0ODAzLC03NDIxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2
+NTkwLDEzNjI5MzY1ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LD
+E4Nzk5OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0
+MDg4MTg0MV19
 -->
