--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -244,7 +244,8 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* 해당 메세지가 출력되는 쿼리는 많은 부하를 일으키기 때문에 쿼리를 튜닝하거나 인덱스를 생성하는 것이 좋다.
 * **Using index(커버링 인덱스)**
 	* 데이터 파일을 전혀 읽지 않고 인덱스만 읽어서 쿼리를 모두 처리할 수 있을 때 표시.
-	* 
+	* 인덱스를 검색해 일치하는 레코드의 나머지 칼럼 값을 가져오기 위해 데이터 파일을 읽는 과정은 많은 디스크 읽기를 불러일으킬 수 있다.
+	* 만약 인덱스 레인지 스캔을 사용하지만 쿼리의 성능이 만족스럽지 못한 경우 인덱스에 있는 칼럼만 사용하도록 쿼리를 변경
 * **Using index for group-by**
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
@@ -255,11 +256,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzYwNzU1NjQ2LDQ1NTc0MDY1NywtMTMxMz
-MxNDAyMCwyOTQ1NTc0NTcsNTM1MjA2ODY3LDEwODU5ODY2Niwt
-MTgxNTgzMzkxNCwyMDE0MTY3OTU4LC0xNzA3OTg1MDM0LC0xNj
-gwMjY0ODAzLC03NDIxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2
-NTkwLDEzNjI5MzY1ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LD
-E4Nzk5OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0
-MDg4MTg0MV19
+eyJoaXN0b3J5IjpbLTY0ODIwMzk3OCw0NTU3NDA2NTcsLTEzMT
+MzMTQwMjAsMjk0NTU3NDU3LDUzNTIwNjg2NywxMDg1OTg2NjYs
+LTE4MTU4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMT
+Y4MDI2NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2
+NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OS
+wxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1
+NDA4ODE4NDFdfQ==
 -->
