--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -246,7 +246,9 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* 데이터 파일을 전혀 읽지 않고 인덱스만 읽어서 쿼리를 모두 처리할 수 있을 때 표시.
 	* 인덱스를 검색해 일치하는 레코드의 나머지 칼럼 값을 가져오기 위해 데이터 파일을 읽는 과정은 많은 디스크 읽기를 불러일으킬 수 있다.
 	* 만약 인덱스 레인지 스캔을 사용하지만 쿼리의 성능이 만족스럽지 못한 경우 인덱스에 있는 칼럼만 사용하도록 쿼리를 변경. 
+	* but 무조건 커버링 인덱스로 처리하려고 인덱스에 많은 칼럼을 추가시 메모리 낭비와 레코드를 저장하거나 변경하는 작업이 매우 오래 걸릴 수 있다.
 * **Using index for group-by**
+	* 
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
 * **Using temporary**
@@ -256,11 +258,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMzOTQ1MDcxMiw0NTU3NDA2NTcsLTEzMT
-MzMTQwMjAsMjk0NTU3NDU3LDUzNTIwNjg2NywxMDg1OTg2NjYs
-LTE4MTU4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMT
-Y4MDI2NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2
-NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OS
-wxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1
-NDA4ODE4NDFdfQ==
+eyJoaXN0b3J5IjpbLTEwNzk0NjI1MTUsNDU1NzQwNjU3LC0xMz
+EzMzE0MDIwLDI5NDU1NzQ1Nyw1MzUyMDY4NjcsMTA4NTk4NjY2
+LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLT
+E2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5
+NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyND
+ksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwx
+NTQwODgxODQxXX0=
 -->
