--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -248,18 +248,19 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* 만약 인덱스 레인지 스캔을 사용하지만 쿼리의 성능이 만족스럽지 못한 경우 인덱스에 있는 칼럼만 사용하도록 쿼리를 변경. 
 	* but 무조건 커버링 인덱스로 처리하려고 인덱스에 많은 칼럼을 추가시 메모리 낭비와 레코드를 저장하거나 변경하는 작업이 매우 오래 걸릴 수 있다.
 * **Using index for group-by**
-	* 
+	* GROUP BY 처리를 위해선 그룹핑 기준 칼럼을 이용해 정렬 작업을 수행하고 다시 정렬된 결과를 그룹핑하는 형태의 고부하 작업 수행.
+	* 인덱스가 존재한다면 인덱스 칼럼을 순서대로 읽기만 하면 됨
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
 * **Using temporary**
 * **Usind where**
 * **Using where with pushed condition**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1OTQ0MzQzNzksNDU1NzQwNjU3LC0xMz
-EzMzE0MDIwLDI5NDU1NzQ1Nyw1MzUyMDY4NjcsMTA4NTk4NjY2
-LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLT
-E2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5
-NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyND
-ksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwx
-NTQwODgxODQxXX0=
+eyJoaXN0b3J5IjpbLTE5MjE1MDA5NzgsLTE1OTQ0MzQzNzksND
+U1NzQwNjU3LC0xMzEzMzE0MDIwLDI5NDU1NzQ1Nyw1MzUyMDY4
+NjcsMTA4NTk4NjY2LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLT
+E3MDc5ODUwMzQsLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkx
+Mjc0MTQ3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2Mz
+Y1LDEzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwt
+MTcyNzU3NDQ0MV19
 -->
