RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -249,18 +249,19 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* but 무조건 커버링 인덱스로 처리하려고 인덱스에 많은 칼럼을 추가시 메모리 낭비와 레코드를 저장하거나 변경하는 작업이 매우 오래 걸릴 수 있다.
 * **Using index for group-by**
 	* GROUP BY 처리를 위해선 그룹핑 기준 칼럼을 이용해 정렬 작업을 수행하고 다시 정렬된 결과를 그룹핑하는 형태의 고부하 작업 수행.
-	* 인덱스가 존재한다면 인덱스 칼럼을 순서대로 읽기만 하면 됨
+	* 인덱스가 존재한다면 인덱스 칼럼을 순서대로 읽기만 하면 됨. (이 때 위 문구가 표시) (루스 인덱스 스캔)
+		* 만야
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
 * **Using temporary**
 * **Usind where**
 * **Using where with pushed condition**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MjE1MDA5NzgsLTE1OTQ0MzQzNzksND
-U1NzQwNjU3LC0xMzEzMzE0MDIwLDI5NDU1NzQ1Nyw1MzUyMDY4
-NjcsMTA4NTk4NjY2LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLT
-E3MDc5ODUwMzQsLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkx
-Mjc0MTQ3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2Mz
-Y1LDEzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwt
-MTcyNzU3NDQ0MV19
+eyJoaXN0b3J5IjpbLTkxNjcyMjk0OSwtMTU5NDQzNDM3OSw0NT
+U3NDA2NTcsLTEzMTMzMTQwMjAsMjk0NTU3NDU3LDUzNTIwNjg2
+NywxMDg1OTg2NjYsLTE4MTU4MzM5MTQsMjAxNDE2Nzk1OCwtMT
+cwNzk4NTAzNCwtMTY4MDI2NDgwMywtNzQyMTM2MDUzLC04OTEy
+NzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYzNj
+UsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC0x
+NzI3NTc0NDQxXX0=
 -->
