RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -251,18 +251,18 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* GROUP BY 처리를 위해선 그룹핑 기준 칼럼을 이용해 정렬 작업을 수행하고 다시 정렬된 결과를 그룹핑하는 형태의 고부하 작업 수행.
 	* 인덱스가 존재한다면 인덱스 칼럼을 순서대로 읽기만 하면 됨. (이 때 위 문구가 표시) (루스 인덱스 스캔)
 		* 만약 AVG()나 SUM() 과 같이 조회하려는 값이 모든 인덱스를 다 읽어야 하는 경우는 Using index for group-by라고 표시되지 않는다.(타이트 인덱스 스캔)
-	* 
+		* 
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
 * **Using temporary**
 * **Usind where**
 * **Using where with pushed condition**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMzY4MzEzNTksLTE1OTQ0MzQzNzksND
-U1NzQwNjU3LC0xMzEzMzE0MDIwLDI5NDU1NzQ1Nyw1MzUyMDY4
-NjcsMTA4NTk4NjY2LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLT
-E3MDc5ODUwMzQsLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkx
-Mjc0MTQ3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2Mz
-Y1LDEzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwt
-MTcyNzU3NDQ0MV19
+eyJoaXN0b3J5IjpbMTQ0MzQ3MTU5MywtMjAzNjgzMTM1OSwtMT
+U5NDQzNDM3OSw0NTU3NDA2NTcsLTEzMTMzMTQwMjAsMjk0NTU3
+NDU3LDUzNTIwNjg2NywxMDg1OTg2NjYsLTE4MTU4MzM5MTQsMj
+AxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2NDgwMywtNzQy
+MTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2NT
+g4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0x
+NDkwMjQ4NzY0XX0=
 -->
