RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -251,6 +251,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* GROUP BY 처리를 위해선 그룹핑 기준 칼럼을 이용해 정렬 작업을 수행하고 다시 정렬된 결과를 그룹핑하는 형태의 고부하 작업 수행.
 	* 인덱스가 존재한다면 인덱스 칼럼을 순서대로 읽기만 하면 됨. (이 때 위 문구가 표시) (루스 인덱스 스캔)
 		* 만약 AVG()나 SUM() 과 같이 조회하려는 값이 모든 인덱스를 다 읽어야 하는 경우는 Using index for group-by라고 표시되지 않는다.(타이트 인덱스 스캔)
+	* GROUP BY에서 인덱스를 사용하기 위해선 인덱스 사용 요건을 갖춰야한다. 하지만 그 이전에 WHERE 절에서 사용하는 인덱스에 의해서도 사용 여부가 영향을 받는다.
 		* 
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
@@ -258,11 +259,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Usind where**
 * **Using where with pushed condition**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ0MzQ3MTU5MywtMjAzNjgzMTM1OSwtMT
-U5NDQzNDM3OSw0NTU3NDA2NTcsLTEzMTMzMTQwMjAsMjk0NTU3
-NDU3LDUzNTIwNjg2NywxMDg1OTg2NjYsLTE4MTU4MzM5MTQsMj
-AxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2NDgwMywtNzQy
-MTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2NT
-g4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0x
-NDkwMjQ4NzY0XX0=
+eyJoaXN0b3J5IjpbNjE1ODc4MjU2LC0yMDM2ODMxMzU5LC0xNT
+k0NDM0Mzc5LDQ1NTc0MDY1NywtMTMxMzMxNDAyMCwyOTQ1NTc0
+NTcsNTM1MjA2ODY3LDEwODU5ODY2NiwtMTgxNTgzMzkxNCwyMD
+E0MTY3OTU4LC0xNzA3OTg1MDM0LC0xNjgwMjY0ODAzLC03NDIx
+MzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NTkwLDEzNjI5MzY1OD
+gsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0
+OTAyNDg3NjRdfQ==
 -->
