RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -252,18 +252,21 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* 인덱스가 존재한다면 인덱스 칼럼을 순서대로 읽기만 하면 됨. (이 때 위 문구가 표시) (루스 인덱스 스캔)
 		* 만약 AVG()나 SUM() 과 같이 조회하려는 값이 모든 인덱스를 다 읽어야 하는 경우는 Using index for group-by라고 표시되지 않는다.(타이트 인덱스 스캔)
 	* GROUP BY에서 인덱스를 사용하기 위해선 인덱스 사용 요건을 갖춰야한다. 하지만 그 이전에 WHERE 절에서 사용하는 인덱스에 의해서도 사용 여부가 영향을 받는다.
-		* 
+		* WHERE 조건절이 없는 경우
+			* 
+		* WHERE 조건절이 있지만 검색을 위해 인덱스를 사용하지 못하는 경우
+		* WHERE 절의 조건이 있으며, 검색을 위해 인덱스를 사용하는 경우
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
 * **Using temporary**
 * **Usind where**
 * **Using where with pushed condition**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjE1ODc4MjU2LC0yMDM2ODMxMzU5LC0xNT
-k0NDM0Mzc5LDQ1NTc0MDY1NywtMTMxMzMxNDAyMCwyOTQ1NTc0
-NTcsNTM1MjA2ODY3LDEwODU5ODY2NiwtMTgxNTgzMzkxNCwyMD
-E0MTY3OTU4LC0xNzA3OTg1MDM0LC0xNjgwMjY0ODAzLC03NDIx
-MzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NTkwLDEzNjI5MzY1OD
-gsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0
-OTAyNDg3NjRdfQ==
+eyJoaXN0b3J5IjpbMTcxNTAyMjYyMyw2MTU4NzgyNTYsLTIwMz
+Y4MzEzNTksLTE1OTQ0MzQzNzksNDU1NzQwNjU3LC0xMzEzMzE0
+MDIwLDI5NDU1NzQ1Nyw1MzUyMDY4NjcsMTA4NTk4NjY2LC0xOD
+E1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLTE2ODAy
+NjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OT
+AsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3
+OTk5NDU1M119
 -->
