RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -253,8 +253,9 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 		* 만약 AVG()나 SUM() 과 같이 조회하려는 값이 모든 인덱스를 다 읽어야 하는 경우는 Using index for group-by라고 표시되지 않는다.(타이트 인덱스 스캔)
 	* GROUP BY에서 인덱스를 사용하기 위해선 인덱스 사용 요건을 갖춰야한다. 하지만 그 이전에 WHERE 절에서 사용하는 인덱스에 의해서도 사용 여부가 영향을 받는다.
 		* WHERE 조건절이 없는 경우
-			* 
+			* GROUP BY가 루즈 인덱스 스캔을 사용할 수 있는 조건만 맞으면 가능
 		* WHERE 조건절이 있지만 검색을 위해 인덱스를 사용하지 못하는 경우
+			* GROUP BY를 위해 인덱스를 읽은 후 WHERE 조건을 위해 데이터 레코드를 읽어야 하기 때문에 타이트 인덱스 스캔이 사용.
 		* WHERE 절의 조건이 있으며, 검색을 위해 인덱스를 사용하는 경우
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
@@ -262,7 +263,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Usind where**
 * **Using where with pushed condition**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcxNTAyMjYyMyw2MTU4NzgyNTYsLTIwMz
+eyJoaXN0b3J5IjpbMTU4OTk4NTMwNiw2MTU4NzgyNTYsLTIwMz
 Y4MzEzNTksLTE1OTQ0MzQzNzksNDU1NzQwNjU3LC0xMzEzMzE0
 MDIwLDI5NDU1NzQ1Nyw1MzUyMDY4NjcsMTA4NTk4NjY2LC0xOD
 E1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLTE2ODAy
