RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -257,18 +257,18 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 		* WHERE 조건절이 있지만 검색을 위해 인덱스를 사용하지 못하는 경우
 			* GROUP BY를 위해 인덱스를 읽은 후 WHERE 조건을 위해 데이터 레코드를 읽어야 하기 때문에 타이트 인덱스 스캔이 사용.
 		* WHERE 절의 조건이 있으며, 검색을 위해 인덱스를 사용하는 경우
-			* WHERE 조건절이 검색하는데 사용했던 인덱스를 GROUP BY처리가 다시 사용할 수 있을 때만 루즈 인덱스 스캔을 사용할 수 있다. (만약 둘의 사용하는 인덱스가 다르다면 WHERE 조건절의 인덱스를 사용하는 경향이 있다.)
+			* WHERE 조건절이 검색하는데 사용했던 인덱스를 GROUP BY처리가 다시 사용할 수 있을 때만 루즈 인덱스 스캔을 사용할 수 있다. (만약 둘의 사용하는 인덱스가 다르다면 WHERE 조건절의 인덱스를 사용하는 경향이 있다.) (무조건 루즈인덱스 스캔을 사용하는건 아니다. 옵티마이저가 판단.)
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
 * **Using temporary**
 * **Usind where**
 * **Using where with pushed condition**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjQ2NjUzNzUwLDYxNTg3ODI1NiwtMjAzNj
-gzMTM1OSwtMTU5NDQzNDM3OSw0NTU3NDA2NTcsLTEzMTMzMTQw
-MjAsMjk0NTU3NDU3LDUzNTIwNjg2NywxMDg1OTg2NjYsLTE4MT
-U4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2
-NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MC
-wxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5
-OTk0NTUzXX0=
+eyJoaXN0b3J5IjpbLTE1NzU4NTYyNTAsNjE1ODc4MjU2LC0yMD
+M2ODMxMzU5LC0xNTk0NDM0Mzc5LDQ1NTc0MDY1NywtMTMxMzMx
+NDAyMCwyOTQ1NTc0NTcsNTM1MjA2ODY3LDEwODU5ODY2NiwtMT
+gxNTgzMzkxNCwyMDE0MTY3OTU4LC0xNzA3OTg1MDM0LC0xNjgw
+MjY0ODAzLC03NDIxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NT
+kwLDEzNjI5MzY1ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4
+Nzk5OTQ1NTNdfQ==
 -->
