RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -259,16 +259,17 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 		* WHERE 절의 조건이 있으며, 검색을 위해 인덱스를 사용하는 경우
 			* WHERE 조건절이 검색하는데 사용했던 인덱스를 GROUP BY처리가 다시 사용할 수 있을 때만 루즈 인덱스 스캔을 사용할 수 있다. (만약 둘의 사용하는 인덱스가 다르다면 WHERE 조건절의 인덱스를 사용하는 경향이 있다.) (무조건 루즈인덱스 스캔을 사용하는건 아니다. 옵티마이저가 판단.)
 * **Using join buffer(MySQL 5.1 부터)**
+	* 
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
 * **Using temporary**
 * **Usind where**
 * **Using where with pushed condition**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NzU4NTYyNTAsNjE1ODc4MjU2LC0yMD
-M2ODMxMzU5LC0xNTk0NDM0Mzc5LDQ1NTc0MDY1NywtMTMxMzMx
-NDAyMCwyOTQ1NTc0NTcsNTM1MjA2ODY3LDEwODU5ODY2NiwtMT
-gxNTgzMzkxNCwyMDE0MTY3OTU4LC0xNzA3OTg1MDM0LC0xNjgw
-MjY0ODAzLC03NDIxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NT
-kwLDEzNjI5MzY1ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4
-Nzk5OTQ1NTNdfQ==
+eyJoaXN0b3J5IjpbLTE4MjM2NjM2NDIsLTE1NzU4NTYyNTAsNj
+E1ODc4MjU2LC0yMDM2ODMxMzU5LC0xNTk0NDM0Mzc5LDQ1NTc0
+MDY1NywtMTMxMzMxNDAyMCwyOTQ1NTc0NTcsNTM1MjA2ODY3LD
+EwODU5ODY2NiwtMTgxNTgzMzkxNCwyMDE0MTY3OTU4LC0xNzA3
+OTg1MDM0LC0xNjgwMjY0ODAzLC03NDIxMzYwNTMsLTg5MTI3ND
+E0NywxNTE1OTY2NTkwLDEzNjI5MzY1ODgsMTQxNDUyNjM2NSwx
+MzE0MzMxMjQ5XX0=
 -->
