RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -263,16 +263,18 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* ??(p320)드라이빙 테이블에서 읽은 레코드를 임시 공간에 보관해둘 때 표시
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
 	* 쿼리가 Index_merge 접근 방식으로 실행되는 경우에 2개 이상의 인덱스가 동시 사용 될 수 있다. 이 때 두 인덱스로부터 읽은 결과를 어떻게 병합했는지 나타내기 위해 위 문구들이 표시된다.
-		* 
+		* Using sort_union(...) : 각 조건이 
+		* Uing union(...)
+		* Using intersect(...)
 * **Using temporary**
 * **Usind where**
 * **Using where with pushed condition**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk0MDc3NTQ3NywtMTU3NTg1NjI1MCw2MT
-U4NzgyNTYsLTIwMzY4MzEzNTksLTE1OTQ0MzQzNzksNDU1NzQw
-NjU3LC0xMzEzMzE0MDIwLDI5NDU1NzQ1Nyw1MzUyMDY4NjcsMT
-A4NTk4NjY2LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5
-ODUwMzQsLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MT
-Q3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEz
-MTQzMzEyNDldfQ==
+eyJoaXN0b3J5IjpbLTE5NTgzNDEyNTYsLTE1NzU4NTYyNTAsNj
+E1ODc4MjU2LC0yMDM2ODMxMzU5LC0xNTk0NDM0Mzc5LDQ1NTc0
+MDY1NywtMTMxMzMxNDAyMCwyOTQ1NTc0NTcsNTM1MjA2ODY3LD
+EwODU5ODY2NiwtMTgxNTgzMzkxNCwyMDE0MTY3OTU4LC0xNzA3
+OTg1MDM0LC0xNjgwMjY0ODAzLC03NDIxMzYwNTMsLTg5MTI3ND
+E0NywxNTE1OTY2NTkwLDEzNjI5MzY1ODgsMTQxNDUyNjM2NSwx
+MzE0MzMxMjQ5XX0=
 -->
