RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -269,13 +269,14 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Using temporary**
 	* 쿼리를 처리하는 동안 중간 결과를 담아 두기 위해 임시테이블을 사용하는 경우 표시된다.
 * **Usind where**
+	* 
 * **Using where with pushed condition**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTM4OTcxNTc1LC0xNTc1ODU2MjUwLDYxNT
-g3ODI1NiwtMjAzNjgzMTM1OSwtMTU5NDQzNDM3OSw0NTU3NDA2
-NTcsLTEzMTMzMTQwMjAsMjk0NTU3NDU3LDUzNTIwNjg2NywxMD
-g1OTg2NjYsLTE4MTU4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4
-NTAzNCwtMTY4MDI2NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxND
-csMTUxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMx
-NDMzMTI0OV19
+eyJoaXN0b3J5IjpbLTEzNjczNzg3OTMsLTE1NzU4NTYyNTAsNj
+E1ODc4MjU2LC0yMDM2ODMxMzU5LC0xNTk0NDM0Mzc5LDQ1NTc0
+MDY1NywtMTMxMzMxNDAyMCwyOTQ1NTc0NTcsNTM1MjA2ODY3LD
+EwODU5ODY2NiwtMTgxNTgzMzkxNCwyMDE0MTY3OTU4LC0xNzA3
+OTg1MDM0LC0xNjgwMjY0ODAzLC03NDIxMzYwNTMsLTg5MTI3ND
+E0NywxNTE1OTY2NTkwLDEzNjI5MzY1ODgsMTQxNDUyNjM2NSwx
+MzE0MzMxMjQ5XX0=
 -->
