--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -269,16 +269,16 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Using temporary**
 	* 쿼리를 처리하는 동안 중간 결과를 담아 두기 위해 임시테이블을 사용하는 경우 표시된다.
 * **Usind where**
-	* (p323) 실제로 작업 범위 제한 조건은 각 스토리지 엔진 에벨에서 처리되지만 체크 조건은 MySQL 엔진 레이어에서 처리한다.
+	* (p323) 실제로 작업 범위 제한 조건은 각 스토리지 엔진 에벨에서 처리되지만 체크 조건은 MySQL 엔진 레이어에서 처리한다. (MySQL5.1 InnoDB 버전부터는 모두 스토리지 엔진에서 처리)
 	* MySQL 엔진 레이어에서 별도의 가공을 해서 필터링 작업을 처리한 경우에 표시된다.
 * **Using where with pushed condition**
-	* 
+	* condition push down이 적용됐음을 의미
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIwNzU5OTQ0NiwtMTU3NTg1NjI1MCw2MT
-U4NzgyNTYsLTIwMzY4MzEzNTksLTE1OTQ0MzQzNzksNDU1NzQw
-NjU3LC0xMzEzMzE0MDIwLDI5NDU1NzQ1Nyw1MzUyMDY4NjcsMT
-A4NTk4NjY2LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5
-ODUwMzQsLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MT
-Q3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEz
-MTQzMzEyNDldfQ==
+eyJoaXN0b3J5IjpbMjIxNjE3OTY2LC0xNTc1ODU2MjUwLDYxNT
+g3ODI1NiwtMjAzNjgzMTM1OSwtMTU5NDQzNDM3OSw0NTU3NDA2
+NTcsLTEzMTMzMTQwMjAsMjk0NTU3NDU3LDUzNTIwNjg2NywxMD
+g1OTg2NjYsLTE4MTU4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4
+NTAzNCwtMTY4MDI2NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxND
+csMTUxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMx
+NDMzMTI0OV19
 -->
