RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -273,8 +273,9 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* MySQL 엔진 레이어에서 별도의 가공을 해서 필터링 작업을 처리한 경우에 표시된다.
 * **Using where with pushed condition**
 	* condition push down이 적용됐음을 의미
+	* 비효율 개선
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjIxNjE3OTY2LC0xNTc1ODU2MjUwLDYxNT
+eyJoaXN0b3J5IjpbMzc0NjIxMjk0LC0xNTc1ODU2MjUwLDYxNT
 g3ODI1NiwtMjAzNjgzMTM1OSwtMTU5NDQzNDM3OSw0NTU3NDA2
 NTcsLTEzMTMzMTQwMjAsMjk0NTU3NDU3LDUzNTIwNjg2NywxMD
 g1OTg2NjYsLTE4MTU4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4
